crates/fossil-graph/tests/snapshots/schemas__summarize_cluster_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (graphrag::SummarizeClusterParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: SummarizeClusterParams
type: object
required:
  - cluster_id
properties:
  cluster_id:
    type: integer
    format: uint32
    minimum: 0
additionalProperties: false
