crates/fossil-graph/tests/snapshots/schemas__top_k_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (aggregate::TopKParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: TopKParams
type: object
required:
  - order_by
  - vertex_type
properties:
  descending:
    default: false
    type: boolean
  k:
    default: 20
    type: integer
    format: uint32
    minimum: 0
  order_by:
    type: string
  vertex_type:
    type: string
additionalProperties: false
