crates/fossil-graph/tests/snapshots/schemas__top_k_result.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (aggregate::TopKResult)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: TopKResult
type: object
required:
  - rows
properties:
  rows:
    description: Rows as opaque JSON objects so the verb stays generic across arbitrary vertex shapes. Bindings render to their UI of choice.
    type: array
    items: true
