crates/fossil-graph/tests/snapshots/schemas__viewport_params.snap
---
source: crates/fossil-graph/tests/schemas.rs
expression: "schema_for! (viewport::ViewportParams)"
---
$schema: "http://json-schema.org/draft-07/schema#"
title: ViewportParams
type: object
required:
  - bbox
  - zoom
properties:
  bbox:
    $ref: "#/definitions/BoundingBox"
  limit:
    default: 500000
    type: integer
    format: uint32
    minimum: 0
  lod_threshold:
    default: 0.5
    type: number
    format: float
  vertex_types:
    description: Restrict to a subset of vertex types. Empty = all.
    default: []
    type: array
    items:
      type: string
  zoom:
    description: "Current zoom level. Above [`Self::lod_threshold`] the executor swaps to aggregate mode (`GROUP BY cluster_id`) returning ≤ 10k super-nodes regardless of total N."
    type: number
    format: float
additionalProperties: false
definitions:
  BoundingBox:
    type: object
    required:
      - x_max
      - x_min
      - y_max
      - y_min
    properties:
      x_max:
        type: number
        format: float
      x_min:
        type: number
        format: float
      y_max:
        type: number
        format: float
      y_min:
        type: number
        format: float
